Finished Test() and Set(). Created functionality with Catch unit testing framework

--- a/lab1/Makefile
+++ b/lab1/Makefile
@@ -1,10 +1,18 @@
 CXX=/home/smarz1/Programs/x86_64/bin/g++
 CXXFLAGS=-Wall -std=c++17 -g -O0
 PROGRAM_OUTPUT=lab1
-all: lab1
 
-lab1: main.cpp lab1.cpp
-	$(CXX) $(CXXFLAGS) -o $(PROGRAM_OUTPUT) main.cpp
+default: main
+all: main
+
+main: driver.o lab1.o
+	$(CXX) $(CXXFLAGS) -o $(PROGRAM_OUTPUT) lab1.o driver.o
+
+driver.o: driver.cpp lab1.h
+	$(CXX) $(CXXFLAGS) -o driver.o -c driver.cpp
+
+lab1.o: lab1.cpp lab1.h
+	$(CXX) $(CXXFLAGS) -o lab1.o -c lab1.cpp
 
 clean:
-	rm -f lab1
+	rm -f lab1 *.o
